--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     ],
     "autoload": {
     	"psr-4": { "Frootbox\\Filesystem\\": "src/" }
+    },
+    "require": {
+        "php": ">=7.0.0"
     }
 }
